--- a/src/components/EditableTable/EditableTable.module.scss
+++ b/src/components/EditableTable/EditableTable.module.scss
@@ -44,6 +44,10 @@
     }
 }
 
+.invalidCell {
+    background-color: vars.$color-primary-15;
+}
+
 .wrapper {
     width: 100%;
     overflow-x: auto;
