add some responsiveness

--- a/src/components/EditableTable/EditableTable.module.scss
+++ b/src/components/EditableTable/EditableTable.module.scss
@@ -9,6 +9,7 @@
 
     border-collapse: collapse;
 
+    white-space: nowrap;
     color: vars.$color-grey-70;
     background-color: vars.$color-grey-0;
     border-radius: .8rem;
