--- a/src/components/RecapitulationDisplay/RecapitulationDisplay.module.scss
+++ b/src/components/RecapitulationDisplay/RecapitulationDisplay.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/variables.scss" as vars;
+@use "../../styles/functions.scss" as func;
 
 .container {
     background-color: vars.$color-grey-5;
@@ -10,6 +11,10 @@
     margin: 0 auto;
 
     padding: 1.2rem;
+
+    @media (max-width: func.pxToEm(400)) {
+        min-width: auto;
+    }
 }
 
 .row {
