--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -1,3 +1,4 @@
+@use "./functions.scss" as func;
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
 
 // CSS RESET
@@ -10,6 +11,14 @@
     
     html {
         font-size: 62.5%; // 1rem = 10px
+
+        @media (min-width: func.pxToEm(1600)) {
+            font-size: 68.75%; // 1rem = 11px
+        }
+    
+        @media (min-width: func.pxToEm(1800)) {
+            font-size: 75%; // 1rem = 12px
+        }
     }
     
     body {
