--- a/src/components/FileDragInput/FileDragInput.module.scss
+++ b/src/components/FileDragInput/FileDragInput.module.scss
@@ -14,6 +14,11 @@
 
     cursor: pointer;
 
+    &:focus-visible {
+        outline: .2rem solid vars.$color-grey-80;
+        outline-offset: -.1rem;
+    }
+
     &--dragging {
         background-color: vars.$color-grey-5;
     }
