--- a/src/components/FileRow/FileRow.module.scss
+++ b/src/components/FileRow/FileRow.module.scss
@@ -40,6 +40,7 @@
 
     background-color: transparent;
     border: none;
+    border-radius: .4rem;
 
     width: 2rem;
     height: 2rem;
@@ -50,5 +51,10 @@
         width: 100%;
         height: 100%;
         fill: vars.$color-primary-70;
+    }
+
+    &:focus-visible {
+        outline: .2rem solid vars.$color-grey-80;
+        outline-offset: -.1rem;
     }
 }
